# Meta-ROI-ML-Model

./: .gitignore  AGENTS.md  DATA_CARD.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  workplan.md
.github/workflows/: ci.yml
configs/: run.yaml
docs/: BATCH_SCORING.md  BYO_CSVS.md  CALIBRATION_AND_ELV.md  CONNECTORS.md  CREATIVE_EMBEDDINGS.md  HUGGINGFACE_SPACES.md  QUICKSTART.md
scripts/: build_demo_model.py
src/meta_elv/: __main__.py  cli.py  config.py  pipeline.py  profile.py  run_artifacts.py  scoring.py  table_builder.py  utils.py  validate.py
src/meta_elv/assets/: demo_model.joblib
src/meta_elv/connectors/: __init__.py  base.py
src/meta_elv/connectors/meta_csv/: __init__.py  loader.py
src/meta_elv/creatives/: __init__.py  analysis.py  embeddings.py  pipeline.py
src/meta_elv/demo/: __init__.py  generate.py
src/meta_elv/drift/: __init__.py  psi.py
src/meta_elv/genai/: __init__.py  gemini_advisor.py
src/meta_elv/modeling/: __init__.py  calibration.py  metrics.py  split.py  train.py
src/meta_elv/reporting/: __init__.py  report.py
tests/: test_connectors_drop_extras.py  test_creative_analysis.py  test_demo_data_enrichments.py  test_drift_metrics.py  test_drift_reference.py  test_enrichments.py  test_feature_lag.py  test_label_maturity.py  test_label_maturity_and_leakage.py  test_outcomes_optional.py  test_validation.py
