[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-elv"
version = "0.1.0"
description = "Expected Lead Value (ELV) kit for Meta Lead Ads: validate -> build table -> train -> score -> report."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Meta-ROI-ML-Model contributors"}]
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "rich>=13.7",
  "scikit-learn>=1.4",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
lgbm = [
  "lightgbm>=4.0",
]
ui = [
  "streamlit>=1.31",
]

[project.scripts]
elv = "meta_elv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meta_elv = ["assets/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
